--- a/contracts/package.json
+++ b/contracts/package.json
@@ -49,6 +49,7 @@
   },
   "dependencies": {
     "@consensys/linea-sdk": "^0.1.6",
+    "@openzeppelin/contracts-upgradeable": "^5.0.2",
     "@types/node": "^20.9.0"
   }
 }
